--- a/admin.html
+++ b/admin.html
@@ -166,7 +166,27 @@ document.addEventListener('DOMContentLoaded', () => {
     // Global State
     let allTeams = [], allCategories = [], detectedHeaders = [], columnMappingsForCategorization = {}, mappingsForEditing = {};
     let existingEditRules = new Map(), existingNoteRules = new Map();
-    const standardFields = [ { key: 'claimId', displayName: 'Claim ID / Number', required: true }, { key: 'age', displayName: 'Age (in days)', required: true }, { key: 'netPayment', displayName: 'Net Payment Amount', required: true }, { key: 'state', displayName: 'Claim State', required: true }, { key: 'status', displayName: 'Claim Status', required: true }, { key: 'networkStatus', displayName: 'Network Status', required: true }, { key: 'providerName', displayName: 'Billing Provider Name', required: true }, { key: 'edit', displayName: 'Claim Edits', required: true }, { key: 'notes', displayName: 'Claim Notes', required: true }, { key: 'dsnp', displayName: 'DSNP Status', required: false }, { key: 'totalCharges', displayName: 'Total Billed Amount', required: false }, ];
+    const standardFields = [
+        // Required Fields for Core Dashboard Functionality
+        { key: 'claimId', displayName: 'Claim ID / Number', required: true },
+        { key: 'age', displayName: 'Age (in days)', required: true },
+        { key: 'netPayment', displayName: 'Net Payment Amount', required: true },
+        { key: 'state', displayName: 'Claim State', required: true },
+        { key: 'status', displayName: 'Claim Status', required: true },
+        { key: 'networkStatus', displayName: 'Network Status', required: true },
+        { key: 'providerName', displayName: 'Billing Provider Name', required: true },
+        { key: 'edit', displayName: 'Claim Edits', required: true },
+        { key: 'notes', displayName: 'Claim Notes', required: true },
+        // Optional Fields for Enhanced Categorization & Data Context
+        { key: 'totalCharges', displayName: 'Total Billed Amount', required: false },
+        { key: 'dsnp', displayName: 'DSNP Status', required: false },
+        { key: 'payer', displayName: 'Payer Name', required: false },
+        { key: 'billingProviderNpi', displayName: 'Billing Provider NPI', required: false },
+        { key: 'renderingProviderName', displayName: 'Rendering Provider Name', required: false },
+        { key: 'renderingProviderNpi', displayName: 'Rendering Provider NPI', required: false },
+        { key: 'dosFrom', displayName: 'Date of Service (From)', required: false },
+        { key: 'dosTo', displayName: 'Date of Service (To)', required: false }
+    ];
     
     // --- CORE DATA LOADING ---
     async function loadConfigurations() {
