--- a/admin.html
+++ b/admin.html
@@ -181,11 +181,23 @@ document.addEventListener('DOMContentLoaded', () => {
         { key: 'totalCharges', displayName: 'Total Billed Amount', required: false },
         { key: 'dsnp', displayName: 'DSNP Status', required: false },
         { key: 'payer', displayName: 'Payer Name', required: false },
+        { key: 'claimCategory', displayName: 'Category', required: false },
+        { key: 'claimType', displayName: 'Claim Type', required: false },
+        { key: 'receivedDate', displayName: 'Received Date', required: false },
+        { key: 'billingProviderTaxId', displayName: 'Billing Provider Tax ID', required: false },
         { key: 'billingProviderNpi', displayName: 'Billing Provider NPI', required: false },
+        { key: 'patientName', displayName: 'Patient Name', required: false },
+        { key: 'subscriberId', displayName: 'Subscriber ID', required: false },
         { key: 'renderingProviderName', displayName: 'Rendering Provider Name', required: false },
         { key: 'renderingProviderNpi', displayName: 'Rendering Provider NPI', required: false },
         { key: 'dosFrom', displayName: 'Date of Service (From)', required: false },
-        { key: 'dosTo', displayName: 'Date of Service (To)', required: false }
+        { key: 'dosTo', displayName: 'Date of Service (To)', required: false },
+        { key: 'cleanAge', displayName: 'Clean Age', required: false },
+        { key: 'pbpName', displayName: 'PBP Name', required: false },
+        { key: 'planName', displayName: 'Plan Name', required: false },
+        { key: 'activityLog', displayName: 'Activity Log Description', required: false },
+        { key: 'activityUser', displayName: 'Activity Performed By', required: false },
+        { key: 'activityDate', displayName: 'Activity Performed On', required: false }
     ];
     
     // --- CORE DATA LOADING ---
