--- a/admin.html
+++ b/admin.html
@@ -15,6 +15,7 @@
         .config-name { cursor: pointer; text-decoration: none; }
         .config-name:hover { text-decoration: underline; }
         .pdf-widget { cursor: grab; }
+        .l1-indicator { font-size: 0.75rem; font-weight: bold; color: #6f42c1; margin-left: 8px; }
     </style>
 </head>
 <body>
@@ -118,7 +119,15 @@
                                         
                                         <h6>Categories</h6>
                                         <div class="mb-3"><select class="form-select" id="teamCategorySelect"><option>Select team...</option></select></div>
-                                        <form id="newCategoryForm" class="d-flex"><input type="text" id="newCategoryName" class="form-control me-2" placeholder="New Category Name" required><button type="submit" class="btn btn-primary btn-sm">Add</button></form>
+                                        <form id="newCategoryForm">
+                                            <div class="d-flex"><input type="text" id="newCategoryName" class="form-control me-2" placeholder="New Category Name" required><button type="submit" class="btn btn-primary btn-sm">Add</button></div>
+                                            <div class="form-check mt-2">
+                                                <input class="form-check-input" type="checkbox" id="l1MonitorCheckbox">
+                                                <label class="form-check-label" for="l1MonitorCheckbox">
+                                                    Also include in L1 Monitor Report
+                                                </label>
+                                            </div>
+                                        </form>
                                         <div id="categoryListContainer" class="mt-3"></div>
                                     </div>
                                     <div class="col-md-8">
@@ -234,7 +243,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
     // DOM Elements
     const configForm = document.getElementById('configForm'), configIdInput = document.getElementById('configId'), configNameInput = document.getElementById('configName'), clientNameInput = document.getElementById('clientName'), clearBtn = document.getElementById('clearBtn'), reportUploader = document.getElementById('reportUploader'), mappingSection = document.getElementById('mappingSection'), mappingTableBody = document.getElementById('mappingTableBody'), mappingHeader = document.getElementById('mappingHeader'), mappingAlert = document.getElementById('mapping-alert'), configList = document.getElementById('configList');
-    const teamList = document.getElementById('teamList'), newTeamForm = document.getElementById('newTeamForm'), newTeamNameInput = document.getElementById('newTeamName'), teamCategorySelect = document.getElementById('teamCategorySelect'), categoryListContainer = document.getElementById('categoryListContainer'), newCategoryForm = document.getElementById('newCategoryForm'), newCategoryNameInput = document.getElementById('newCategoryName');
+    const teamList = document.getElementById('teamList'), newTeamForm = document.getElementById('newTeamForm'), newTeamNameInput = document.getElementById('newTeamName'), teamCategorySelect = document.getElementById('teamCategorySelect'), categoryListContainer = document.getElementById('categoryListContainer'), newCategoryForm = document.getElementById('newCategoryForm'), newCategoryNameInput = document.getElementById('newCategoryName'), l1MonitorCheckbox = document.getElementById('l1MonitorCheckbox');
     const categorizationConfigSelector = document.getElementById('categorizationConfigSelector'), categorizationReportUploader = document.getElementById('categorizationReportUploader'), rulesAssignmentContainer = document.getElementById('rulesAssignmentContainer'), uncategorizedEditsTable = document.getElementById('uncategorizedEditsTable'), uncategorizedNotesTable = document.getElementById('uncategorizedNotesTable'), noRulesFoundDiv = document.getElementById('noRulesFound');
     const existingEditsTableBody = document.getElementById('existingEditsTableBody'), existingNotesTableBody = document.getElementById('existingNotesTableBody'), saveExistingChangesBtn = document.getElementById('saveExistingChangesBtn');
     const pdfReportTitleInput = document.getElementById('pdfReportTitle'), availableWidgetsList = document.getElementById('availableWidgets'), reportLayoutList = document.getElementById('reportLayout');
@@ -458,7 +467,18 @@ document.addEventListener('DOMContentLoaded', () => {
             grouped[teamName].sort((a,b) => a.category_name.localeCompare(b.category_name)).forEach(cat => {
                 const li = document.createElement('li');
                 li.className = 'list-group-item py-1 d-flex justify-content-between align-items-center';
-                li.textContent = cat.category_name;
+                
+                const nameSpan = document.createElement('span');
+                nameSpan.textContent = cat.category_name;
+                li.appendChild(nameSpan);
+
+                if (cat.send_to_l1_monitor) {
+                    const l1Span = document.createElement('span');
+                    l1Span.className = 'l1-indicator';
+                    l1Span.textContent = '(L1 Monitor)';
+                    nameSpan.appendChild(l1Span);
+                }
+
                 const deleteBtn = document.createElement('button');
                 deleteBtn.className = 'btn btn-outline-danger btn-sm py-0 px-1 btn-delete-rule';
                 deleteBtn.innerHTML = '&times;';
@@ -593,7 +613,25 @@ document.addEventListener('DOMContentLoaded', () => {
     reportUploader.addEventListener('change', (event) => { const file = event.target.files[0]; if (!file) return; const reader = new FileReader(); reader.onload = (e) => { try { const data = new Uint8Array(e.target.result); const workbook = XLSX.read(data, { type: 'array' }); const sheet = workbook.Sheets[workbook.SheetNames[0]]; if (!sheet) throw new Error("Sheet not found."); const json = XLSX.utils.sheet_to_json(sheet, { header: 1 }); detectedHeaders = (json[0] || []).filter(h => h != null && h.toString().trim() !== ''); if (detectedHeaders.length === 0) { alert("Could not detect any column headers in the uploaded file. Please ensure the first row contains the column names."); return; } renderMappingUI(); } catch (err) { alert(`Error processing file: ${err.message}`); console.error(err); } }; reader.readAsArrayBuffer(file); });
     clearBtn.addEventListener('click', clearConfigForm);
     newTeamForm.addEventListener('submit', async (e) => { e.preventDefault(); const name = newTeamNameInput.value.trim(); if (!name) return; try { await fetch(TEAMS_API, { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ team_name: name }) }); newTeamNameInput.value = ''; await loadAllData(); } catch (error) { alert('Failed to add team. It may already exist.'); } });
-    newCategoryForm.addEventListener('submit', async (e) => { e.preventDefault(); const category_name = newCategoryNameInput.value.trim(); const team_id = parseInt(teamCategorySelect.value, 10); if (!category_name || !team_id) return alert('Please select a team and enter a category name.'); try { await fetch(CATEGORIES_API, { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ category_name, team_id }) }); newCategoryNameInput.value = ''; await loadAllData(); } catch (error) { alert('Failed to add category. It may already exist.'); } });
+    newCategoryForm.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const category_name = newCategoryNameInput.value.trim();
+        const team_id = parseInt(teamCategorySelect.value, 10);
+        const send_to_l1_monitor = l1MonitorCheckbox.checked;
+        if (!category_name || !team_id) return alert('Please select a team and enter a category name.');
+        try {
+            await fetch(CATEGORIES_API, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ category_name, team_id, send_to_l1_monitor })
+            });
+            newCategoryNameInput.value = '';
+            l1MonitorCheckbox.checked = false;
+            await loadAllData();
+        } catch (error) {
+            alert('Failed to add category. It may already exist.');
+        }
+    });
     categorizationConfigSelector.addEventListener('change', () => { const selectedId = parseInt(categorizationConfigSelector.value, 10); const config = (window.allClientConfigs || []).find(c => c.id === selectedId); if (config?.config_data?.columnMappings) { columnMappingsForCategorization = config.config_data.columnMappings; const hasRequiredCols = columnMappingsForCategorization.edit && columnMappingsForCategorization.notes; categorizationReportUploader.disabled = !hasRequiredCols; if(!hasRequiredCols) alert('Selected config must map both "Claim Edits" and "Claim Notes" to discover new rules.') } });
     categorizationReportUploader.addEventListener('change', (event) => { const file = event.target.files[0]; if (!file) return; const reader = new FileReader(); reader.onload = (e) => { const data = new Uint8Array(e.target.result); const workbook = XLSX.read(data, { type: 'array' }); const dataJson = XLSX.utils.sheet_to_json(workbook.Sheets[workbook.SheetNames[0]]); processUploadedReport(dataJson); }; reader.readAsArrayBuffer(file); });
     document.querySelectorAll('.save-rules-btn').forEach(btn => btn.addEventListener('click', saveNewRules));
@@ -608,3 +646,4 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+// --- END OF FILE admin.html ---
