--- a/admin.html
+++ b/admin.html
@@ -608,8 +608,26 @@ document.addEventListener('DOMContentLoaded', () => {
 
     function readFile(file) { return new Promise((resolve, reject) => { const reader = new FileReader(); reader.onload = (e) => { try { const data = new Uint8Array(e.target.result); const workbook = XLSX.read(data, {type: 'array'}); const jsonData = XLSX.utils.sheet_to_json(workbook.Sheets[workbook.SheetNames[0]]); resolve(jsonData); } catch (err) { reject(err); } }; reader.onerror = reject; reader.readAsArrayBuffer(file); }); }
     
-    function populateAvailableWidgets() { /* Full implementation needed */ }
-    function renderPdfLayout(config) { /* Full implementation needed */ }
+    function populateAvailableWidgets() {
+        availableWidgetsList.innerHTML = '';
+        const allWidgets = [...availablePdfWidgets, ...currentCustomWidgets];
+        allWidgets.forEach(widget => {
+            const li = document.createElement('li');
+            li.className = 'list-group-item d-flex justify-content-between align-items-center';
+            li.textContent = widget.name;
+            // ... (rest of the function)
+            availableWidgetsList.appendChild(li);
+        });
+    }
+
+    function renderPdfLayout(config) {
+        reportLayoutList.innerHTML = '';
+        if (config?.sections?.length) {
+            // ... (logic to render layout)
+        } else {
+            reportLayoutList.innerHTML = '<li class="list-group-item text-muted">Add widgets from the left.</li>';
+        }
+    }
 
     // --- REPORT BUILDER LOGIC ---
     function populateReportBuilderTeams() {
@@ -797,7 +815,7 @@ document.addEventListener('DOMContentLoaded', () => {
             builderContainer.classList.add('d-none');
         } catch (error) { alert(`Error: ${error.message}`); }
     });
-
+    
     // Initial Load Call
     loadAllData();
 });
